SFDC Automation/src/objects/BTR__c.object
<CustomObject>
    <description>Linked to the quote object as 1:1 relationship and used to drive the approval process for the quotes</description>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <description>Used to track the comments by Approver and to be used on email template</description>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Quote__r.Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Conditional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Conditional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote record to which this BTR approval process is linked to.</description>
        <inlineHelpText>The quote record to which this BTR approval process is linked to.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>BTRs</relationshipLabel>
        <relationshipName>BTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester_Comments__c</fullName>
        <label>BTR Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ryder_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to Ryder Branch object.</description>
        <inlineHelpText>Points to the branch of the user who created the BTR.</inlineHelpText>
        <label>Ryder Branch</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>BTRs</relationshipLabel>
        <relationshipName>BTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BTRs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the BTR approval process for a given quote.</description>
        <inlineHelpText>The status of the BTR approval process for a given quote.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted - With FAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - With DAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - With VP AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BTRs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BTR</label>
    <listViews>
        <fullName>UVS_DAM_BTR</fullName>
        <filterScope>Queue</filterScope>
        <label>UVS DAM Queue</label>
        <queue>UVS_DAM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UVS_FAM_BTR</fullName>
        <filterScope>Queue</filterScope>
        <label>UVS FAM Queue</label>
        <queue>UVS_FAM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UVS_VP_AM_BTR</fullName>
        <filterScope>Queue</filterScope>
        <label>UVS VP AM Queue</label>
        <queue>UVS_VP_AM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BTR-{0000000}</displayFormat>
        <label>BTR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTRs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_From_Editing_When_Approved</fullName>
        <active>true</active>
        <description>Prevents the users  from editing the BTR record, when a BTR of that quote is already approved.</description>
        <errorConditionFormula>AND(ISPICKVAL(Quote__r.Status, &apos;BTR Approved&apos;),
ISPICKVAL(Status__c, &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>The BTR record cannot be edited as one of the BTR for this quote has been already approved.</errorMessage>
    </validationRules>
</CustomObject>